modified:   src/index.css 	new file:   src/redux/features/posts/PostedDate.jsx 	modified:   src/redux/features/posts/PostsList.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   background-color: #242424;
   color: white;
 }
-input,textarea {
+input,
+textarea {
   background-color: gray;
+  color: lightblue;
 }
